CS-411 Fixed image overflowing the screen
CS-411 Fixed image overflowing the screen

--- a/csatar-theme/assets/css/csatar-custom-styles.css
+++ b/csatar-theme/assets/css/csatar-custom-styles.css
@@ -1845,7 +1845,7 @@ a.login:link, a.login:visited, a.login:active {
     margin-bottom: 100px;
 }
 
-[aria-labelledby="about-us-tab"] img {
+img:not(.not-auto-height) {
     max-width: 100%;
     height: auto;
 }
@@ -1901,10 +1901,6 @@ input:-webkit-autofill:active {
     border-radius: 12px;
     object-fit: cover;
     object-position: center;
-}
-
-.csat-gallery-img {
-    height: 200px;
 }
 
 .csat-gallery-edit-img {
